--- a/module2-solution/style.css
+++ b/module2-solution/style.css
@@ -5,24 +5,27 @@
 h1 {
   margin-bottom: 15px; text-align: center;
 }
-section{
+.section{
   position: relative;
+  padding: 40px 10px 10px 10px;
+  background-color: grey;
+  border: 1px solid black;
 }
 #title1{
   background-color:pink ;
   border: 1px solid black;
   padding: 5px;
   position: absolute;
-  top: 8%;
-  left: 82.2%;
+  top: 0%;
+  right: 0%;
 }
 #title2{
   background-color: darkred ;
   border: 1px solid black;
   padding: 5px;
   position: absolute;
-  top: 8%;
-  left: 86.7%;
+  top: 0%;
+  right:  0%;
   color:  white;
 }
 #title3{
@@ -30,20 +33,8 @@ section{
   border: 1px solid black;
   padding: 5px;
   position: absolute;
-  top: 8%;
-  left: 85.5%;
-}
-
-p{
-  background-color: grey;
-  border: 1px solid black;
-  width: 90%;
-  height: 180px;
-  margin-right: auto;
-  margin-left: auto;
-  font-family: Helvetica;
-  padding: 15px;
-  padding-top: 50px;
+  top: 0%;
+  right: 0%;
 }
 
 
@@ -52,6 +43,7 @@ p{
    .col-lg-4{
     float: left;
     width: 33.33%;
+    padding: 10px;
    } 
 
 
@@ -61,6 +53,7 @@ p{
 @media (min-width: 768px) and (max-width: 991px) {
   .col-md-6,  .col-md-12 {
     float: left;
+    padding: 10px;
   }
   .col-md-6 {
     width: 50%;
@@ -68,11 +61,13 @@ p{
   .col-md-12 {
     width: 100%;
   }
+ } 
 
  /*Mobile*/
 @media (max-width: 767px) {
     .col-sm-12 {
     float: left;
     width: 100%;
+    padding: 10px;
   }
 }
